Updated:
- GregTech to 4.07i.
- ImmibisCore to 57.1.92.
- ImmibisMicroblocks to 57.5.0.
- IndustrialCraft2 to 2.0.361-experimental.

Downgraded:
- None.

Added:
- None.

Removed:
- None.