@@ -2693,110 +2693,6 @@
             download="server"
             />
 
-        <mod name="ICBMContraption"
-            description="Now blow shit up...it's fun"
-            website="http://universalelectricity.com/icbm/downloads"
-            version="1.6.4-1.3.4.279"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/ICBM_Contraption_v1.3.4.279.jar"
-            file="ICBM_Contraption_v1.3.4.279.jar"
-            md5="9b54bac12e990405af52adee4476e92f"
-            download="server"
-            />
-
-        <mod name="ICBMExplosion"
-            description="Now blow shit it...it's fun"
-            website="http://universalelectricity.com/icbm/downloads"
-            version="1.6.4-1.3.4.279"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/ICBM_Explosion_v1.3.4.279.jar"
-            file="ICBM_Explosion_v1.3.4.279.jar"
-            md5="1c216e21d2bcb3dc61708e376520ed6e"
-            download="server"
-            />
-
-        <mod name="ICBMSentry"
-            description="Now blow shit it...it's fun"
-            website="http://universalelectricity.com/icbm/downloads"
-            version="1.6.4-1.3.4.279"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/ICBM_Sentry_v1.3.4.279.jar"
-            file="ICBM_Sentry_v1.3.4.279.jar"
-            md5="36ad922f508bd1aefc59052482f56018"
-            download="server"
-            />
-
-        <mod name="Mekanism"
-            description="UE's answer to IC2"
-            website="http://universalelectricity.com/mekanism"
-            version="1.6.4-5.6.0.522"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/Mekanism-v5.6.0.522.jar"
-            file="Mekanism-v5.6.0.522.jar"
-            md5="4811147359a728c76d2b6f868feea584"
-            download="server"
-            />
-
-        <mod name="Mekanism-Generators"
-            description="UE's answer to IC2"
-            website="http://universalelectricity.com/mekanism"
-            version="1.6.4-5.6.0.522"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/MekanismGenerators-v5.6.0.522.jar"
-            file="MekanismGenerators-v5.6.0.522.jar"
-            md5="bebea754996396c6b5692ce920f3f69e"
-            download="server"
-            />
-
-        <mod name="Mekanism-Induction"
-            description="Greater power production for UE"
-            website="http://universalelectricity.com/resonant-induction/downloads"
-            version="1.6.4-5.6.0.522"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/MekanismInduction-v5.6.0.522.jar"
-            file="MekanismInduction-v5.6.0.522.jar"
-            md5="12964d23e9039494dbadb2724157f309"
-            download="server"
-            />
-
-        <mod name="Mekanism-Tools"
-            description="UE's answer to IC2"
-            website="http://universalelectricity.com/mekanism"
-            version="1.6.4-5.6.0.522"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/MekanismTools-v5.6.0.522.jar"
-            file="MekanismTools-v5.6.0.522.jar"
-            md5="5f116f9f5110a1bda5a8eaf1ec56e341"
-            download="server"
-            />
-
-        <mod name="AtomicScience"
-            description="Atomic power and particle accelerators in Minecraft"
-            website="http://universalelectricity.com/atomic-science"
-            version="1.6.4-1.0.0.158"
-            type="mods"
-            optional="no"
-            server="yes"
-            url="packs/RedwoodServer/files/1.6.4/Atomic_Science_v1.0.0.158.jar"
-            file="Atomic_Science_v1.0.0.158.jar"
-            md5="e71f9db0f440c67aeda5c8a86d0ac3a1"
-            download="server"
-            />
-
         <mod name="ModularForcefieldSystem"
             description="You can now hide in a shell"
             website="http://universalelectricity.com/mffs/downloads"
